BACKUP/recipies/git/git-services.yaml
apiVersion: v1
kind: Service
metadata:
  #re-use deployment label here
  name: gitserver

spec:
  ports:
    #name of port from deployment
    - name: git
      port: 9418
      #name of port in ingress
      targetPort: git
  selector:
    #re-use deployment label here
    app: gitserver
