BACKUP/recipies/git/git-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitserver-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            #name of deployment used here
            name: gitserver
            port:
              #name of port declared in service
              name: git
